--- a/demo/index.html
+++ b/demo/index.html
@@ -28,9 +28,13 @@
 <body>
 
 <div ng-app="textAngularTest" ng-controller="wysiwygeditor" class="container app">
+  <h1>Editor</h1>
   <div text-angular="text-angular" ng-model="htmlcontent"></div>
+  <h1>Raw HTML in a text area</h1>
   <textarea ng-model="htmlcontent" style="width: 100%"></textarea>
+  <h1>Bound with ng-bind-html</h1>
   <div ng-bind-html="htmlcontent"></div>
+  <button type="button" ng-click="htmlcontent = orightml">Reset</button>
   <p>Note: although we support classes and styles, angularjs' ng-bind-html directive will strip out all style attributes.</p>
 </div>
 
