--- a/demo/static-demo.html
+++ b/demo/static-demo.html
@@ -97,25 +97,25 @@ $provide.decorator('taTools', ['$delegate', function(taTools){
 		}]);
 */
 	});
-	function wysiwygeditor($scope, taToolbarEditorLinker) {
+	function wysiwygeditor($scope, textAngularManager, $document) {
 		$scope.data = {orightml: '<h2>Try me!</h2><p>textAngular is a super cool WYSIWYG Text Editor directive for AngularJS</p><p><b>Features:</b></p><ol><li>Automatic Seamless Two-Way-Binding</li><li>Super Easy <b>Theming</b> Options</li><li style="color: green;">Simple Editor Instance Creation</li><li>Safely Parses Html for Custom Toolbar Icons</li><li class="text-danger">Doesn&apos;t Use an iFrame</li><li>Works with Firefox, Chrome, and IE8+</li></ol><p><b>Code at GitHub:</b> <a href="https://github.com/fraywing/textAngular">Here</a> </p>'};
 		$scope.data.htmlcontent = $scope.data.orightml;
 		$scope.disabled = false;
 		$scope.changetesth1 = function(){
-			taToolbarEditorLinker.updateToolbarTool('test', 'h1', {buttontext: 'Heading 1'});
+			textAngularManager.updateToolbarTool('test', 'h1', {buttontext: 'Heading 1'});
 		};
 		$scope.changeallh2 = function(){
-			taToolbarEditorLinker.updateTool('h2', {buttontext: 'Heading 2'});
+			textAngularManager.updateTool('h2', {buttontext: 'Heading 2'});
 		};
 		$scope.changeallh = function(){
 			var data = {};
 			for(var i = 1; i < 7; i++){
 				data['h' + i] = {buttontext: 'Heading ' + i};
 			}
-			taToolbarEditorLinker.updateTools(data);
+			textAngularManager.updateTools(data);
 		};
 		$scope.resettoolbar = function(){
-			taToolbarEditorLinker.resetTools();
+			textAngularManager.resetTools();
 		};
 		$scope.iconsallh = function(){
 			var data = {};
@@ -125,7 +125,7 @@ $provide.decorator('taTools', ['$delegate', function(taTools){
 					buttontext: i
 				};
 			}
-			taToolbarEditorLinker.updateTools(data);
+			textAngularManager.updateTools(data);
 		};
 		$scope.clear = function(){
 			$scope.data = {orightml: '<h2>Try me!</h2><p>textAngular is a super cool WYSIWYG Text Editor directive for AngularJS</p><p><b>Features:</b></p><ol><li>Automatic Seamless Two-Way-Binding</li><li>Super Easy <b>Theming</b> Options</li><li style="color: green;">Simple Editor Instance Creation</li><li>Safely Parses Html for Custom Toolbar Icons</li><li class="text-danger">Doesn&apos;t Use an iFrame</li><li>Works with Firefox, Chrome, and IE8+</li></ol><p><b>Code at GitHub:</b> <a href="https://github.com/fraywing/textAngular">Here</a> </p>'};
