--- a/demo/static-demo.html
+++ b/demo/static-demo.html
@@ -57,6 +57,7 @@
   <h1>Option to masquerade as a fancy text-area - complete with form submission and optional ngModel</h1>
   <text-angular name="htmlcontent_nomodel"><p>Any <b>HTML</b> we put in-between the text-angular tags gets automatically put into the editor if there <strong style="font-size: 12pt;"><u><em>is not</em></u></strong> a ngModel</p></text-angular>
 </div>
+  <script src='http://rangy.googlecode.com/svn/trunk/currentrelease/rangy-core.js'></script>
   <script src='../bower_components/angular/angular.min.js'></script>
   <script src='../textAngular-sanitize.min.js'></script>
   <script src='../textAngular.js'></script>
@@ -73,7 +74,7 @@
 			taOptions.toolbar[1].push('test');
 			return taOptions;
 		}]);
-		// this demonstrates changing the classes of the icons for the tools for legacy font-awesome
+		// this demonstrates changing the classes of the icons for the tools for font-awesome v3.x
 		/*
 $provide.decorator('taTools', ['$delegate', function(taTools){
 			taTools.bold.iconclass = 'icon-bold';
@@ -102,20 +103,20 @@ $provide.decorator('taTools', ['$delegate', function(taTools){
 		$scope.data.htmlcontent = $scope.data.orightml;
 		$scope.disabled = false;
 		$scope.changetesth1 = function(){
-			textAngularManager.updateToolbarTool('test', 'h1', {buttontext: 'Heading 1'});
+			textAngularManager.updateToolbarToolDisplay('test', 'h1', {buttontext: 'Heading 1'});
 		};
 		$scope.changeallh2 = function(){
-			textAngularManager.updateTool('h2', {buttontext: 'Heading 2'});
+			textAngularManager.updateToolDisplay('h2', {buttontext: 'Heading 2'});
 		};
 		$scope.changeallh = function(){
 			var data = {};
 			for(var i = 1; i < 7; i++){
 				data['h' + i] = {buttontext: 'Heading ' + i};
 			}
-			textAngularManager.updateTools(data);
+			textAngularManager.updateToolsDisplay(data);
 		};
 		$scope.resettoolbar = function(){
-			textAngularManager.resetTools();
+			textAngularManager.resetToolsDisplay();
 		};
 		$scope.iconsallh = function(){
 			var data = {};
@@ -125,7 +126,7 @@ $provide.decorator('taTools', ['$delegate', function(taTools){
 					buttontext: i
 				};
 			}
-			textAngularManager.updateTools(data);
+			textAngularManager.updateToolsDisplay(data);
 		};
 		$scope.clear = function(){
 			$scope.data = {orightml: '<h2>Try me!</h2><p>textAngular is a super cool WYSIWYG Text Editor directive for AngularJS</p><p><b>Features:</b></p><ol><li>Automatic Seamless Two-Way-Binding</li><li>Super Easy <b>Theming</b> Options</li><li style="color: green;">Simple Editor Instance Creation</li><li>Safely Parses Html for Custom Toolbar Icons</li><li class="text-danger">Doesn&apos;t Use an iFrame</li><li>Works with Firefox, Chrome, and IE8+</li></ol><p><b>Code at GitHub:</b> <a href="https://github.com/fraywing/textAngular">Here</a> </p>'};
