--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=10">
     <meta name="fragment" content="!">
     <meta name="author" content="Austin Anderson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
