--- a/index.html
+++ b/index.html
@@ -1,55 +1,88 @@
-
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=10">
-    <meta name="fragment" content="!">
-    <meta name="author" content="Austin Anderson">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="contact" content="austin@rarebreedstudios.com">
-    <meta name="keywords" content="angularjs,angular.js,texteditor,text editor,Wysiwyg,javascript text editor,javascript Wysiwyg">
-    <meta name="copyright" content="Austin Anderson. All rights reserved">
-    <meta charset="utf-8">
-    <title>textAngular :: Lightweight Angular.js, Javascript Wysiwyg/Text-Editor</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/favicon.png">
-    <link rel="author" href="http://www.twitter.com/codeandwaffles">
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,300">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <div ng-app="textAngularDemo" ng-controller="demoController"><br>
-      <div class="container"><a href="http://github.com/fraywing/textAngular"> <img src="images/textAngularLogo.png" style="max-width:500%;" class="lighter"></a></div><br>
-      <div class="container border-around text-center lighter"><span class="text-xlg roboto">A Lightweight, Two-Way-Bound & Totally <b class='text-red'>Awesome</b> Angular.js Text-Editor</span></div>
-      <div class="container lighter">
-        <div text-angular ng-model="htmlContent" name="demo-editor" ta-text-editor-class="border-around" ta-html-editor-class="border-around"></div>
-      </div><br>
-      <div class="container text-center lighter border-around">
-        <div class="lighter roboto">
-          <p ng-bind="htmlContent" class="text-left text-med text-gray"></p>
-        </div>
-      </div><br>
-      <div class="container text-right"><span class="well btn-md"><a href="http://cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.2/textAngular.min.js" class="text-gray"><b>//cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.2/textAngular.min.js</b></a></span>&nbsp;&nbsp;&nbsp;<a href="https://github.com/fraywing/textAngular/archive/v1.2.2.zip" class="btn btn-danger btn-lg">
-          <div><i class="icon-arrow-down"> </i><span>Download v1.2.2</span></div></a></div><br>
-      <div class="container border-around text-center lighter">
-        <iframe src="http://ghbtns.com/github-btn.html?user=fraywing&amp;repo=textAngular&amp;type=watch&amp;size=large&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="220" height="30"></iframe>
-        <iframe src="http://ghbtns.com/github-btn.html?user=fraywing&amp;repo=textAngular&amp;type=fork&amp;size=large" allowtransparency="true" frameborder="0" scrolling="0" width="180" height="30"></iframe>
-        <iframe src="http://ghbtns.com/github-btn.html?user=fraywing&amp;repo=textAngular&amp;type=follow&amp;size=large" allowtransparency="true" frameborder="0" scrolling="0" width="180" height="30"></iframe>
-      </div><br>
-      <div class="container">
-        <div class="text-center">Created by <a href="https://www.linkedin.com/in/austinanderson1">fraywing</a></div>
-        <div class="text-center">2013 Licensed under <a href="http://opensource.org/licenses/MIT">MIT</a></div>
-      </div><br>
-    </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js" type="text/javascript"></script>
-    <script src="http://cdn.jsdelivr.net/g/angular.textangular@1.2.2(textAngular-sanitize.min.js+textAngular.min.js)" type="text/javascript"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js" type="text/javascript"></script>
-    <script src="http://resources.infolinks.com/js/infolinks_main.js" type="text/javascript"></script>
-    <script>
-      angular.module("textAngularDemo", ['textAngular']);
-      function demoController($scope) {
-          $scope.htmlContent = '<h2>Try me!</h2><p>textAngular is a super cool WYSIWYG Text Editor directive for AngularJS</p><p><b>Features:</b></p><ol><li>Automatic Seamless Two-Way-Binding</li><li style="color: blue;">Super Easy <b>Theming</b> Options</li><li>Simple Editor Instance Creation</li><li>Safely Parses Html for Custom Toolbar Icons</li><li>Doesn&apos;t Use an iFrame</li><li>Works with Firefox, Chrome, and IE8+</li></ol><p><b>Code at GitHub:</b> <a href="https://github.com/fraywing/textAngular">Here</a> </p>';
-      };
-    </script>
-  </head>
+<head>
+	<meta http-equiv="X-UA-Compatible" content="IE=10">
+	<meta name="fragment" content="!">
+	<meta name="author" content="Austin Anderson">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="contact" content="austin@rarebreedstudios.com">
+	<meta name="keywords" content="angularjs,angular.js,texteditor,text editor,Wysiwyg,javascript text editor,javascript Wysiwyg">
+	<meta name="copyright" content="Austin Anderson. All rights reserved">
+	<meta charset="utf-8">
+	<title>textAngular :: Lightweight Angular.js, Javascript Wysiwyg/Text-Editor</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="images/favicon.png">
+	<link rel="author" href="https://www.linkedin.com/in/austinanderson1">
+	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,300">
+	<link rel="stylesheet" href="css/style.css" type="text/css">
+</head>
+<body>
+	<div ng-app="TextAngularDemo" ng-controller="DemoController">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<a href="http://github.com/fraywing/textAngular">
+						<img src="images/textAngularLogo.png" style="max-width:500%;">
+					</a>
+					<h2>A Lightweight, Two-Way-Bound &amp; Totally <b class="text-red">Awesome</b> Angular.js Text-Editor</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12">
+					<h3>Editor demo</h3>
+					<div text-angular ng-model="htmlContent" name="demo-editor" ta-text-editor-class="border-around" ta-html-editor-class="border-around"></div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12">
+					<h3>HTML output</h3>
+					<pre ng-bind="htmlContent" class="white-box"></pre>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-8">
+					<h3>CDN URL</h3>
+					<div class="well">
+						<a href="http://cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.2/textAngular.min.js" class="text-gray"><b>//cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.2/textAngular.min.js</b></a>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<h3>Zip package</h3>
+					<a href="https://github.com/fraywing/textAngular/archive/v1.2.2.zip" class="btn btn-block btn-danger btn-lg">
+						Download
+					</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12">
+					<h3>This project at GitHub</h3>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-4">
+					<iframe src="http://ghbtns.com/github-btn.html?user=fraywing&amp;repo=textAngular&amp;type=watch&amp;size=large&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="220" height="30"></iframe>
+				</div>
+
+				<div class="col-sm-4">
+					<iframe src="http://ghbtns.com/github-btn.html?user=fraywing&amp;repo=textAngular&amp;type=fork&amp;size=large" allowtransparency="true" frameborder="0" scrolling="0" width="180" height="30"></iframe>
+				</div>
+
+				<div class="col-sm-4">
+					<iframe src="http://ghbtns.com/github-btn.html?user=fraywing&amp;repo=textAngular&amp;type=follow&amp;size=large" allowtransparency="true" frameborder="0" scrolling="0" width="180" height="30"></iframe>
+				</div>
+			</div>
+			<footer class="row">
+				<div class="col-sm-12 text-center">
+					<p>Created by <a href="https://www.linkedin.com/in/austinanderson1" target="_blank">fraywing</a></p>
+					<p>2013 Licensed under <a href="http://opensource.org/licenses/MIT" target="_blank">MIT</a></p>
+				</div>
+			</footer>
+		</div>
+
+		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js" type="text/javascript"></script>
+		<script src="http://cdn.jsdelivr.net/g/angular.textangular@1.2.2(textAngular-sanitize.min.js+textAngular.min.js)" type="text/javascript"></script>
+		<script src="js/demo.js" type="text/javascript"></script>
+</body>
 </html>
