--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,300">
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/textAngular/1.3.0/src/textAngular.css">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
@@ -45,12 +46,12 @@
 				<div class="col-sm-8">
 					<h3>CDN URL</h3>
 					<div class="well">
-						<a href="http://cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.2/textAngular.min.js" class="text-gray"><b>//cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.2/textAngular.min.js</b></a>
+						<a href="http://cdnjs.cloudflare.com/ajax/libs/textAngular/1.3.0/textAngular.min.js" class="text-gray"><b>//cdnjs.cloudflare.com/ajax/libs/textAngular/1.3.0/textAngular.min.js</b></a>
 					</div>
 				</div>
 				<div class="col-sm-4">
 					<h3>Zip package</h3>
-					<a href="https://github.com/fraywing/textAngular/archive/v1.2.2.zip" class="btn btn-block btn-danger btn-lg">
+					<a href="https://github.com/fraywing/textAngular/archive/v1.3.0.zip" class="btn btn-block btn-danger btn-lg">
 						Download
 					</a>
 				</div>
@@ -82,7 +83,9 @@
 		</div>
 
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js" type="text/javascript"></script>
-		<script src="http://cdn.jsdelivr.net/g/angular.textangular@1.2.2(textAngular-sanitize.min.js+textAngular.min.js)" type="text/javascript"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/textAngular/1.3.0/dist/textAngular-rangy.min.js" type="text/javascript"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/textAngular/1.3.0/dist/textAngular-sanitize.min.js" type="text/javascript"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/textAngular/1.3.0/dist/textAngular.min.js" type="text/javascript"></script>
 		<script src="js/demo.js" type="text/javascript"></script>
 </body>
 </html>
