--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,300">
-	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/textAngular/1.3.0/src/textAngular.css">
+	<link rel="stylesheet" href="dist/textAngular.css">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
@@ -83,9 +83,9 @@
 		</div>
 
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js" type="text/javascript"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/textAngular/1.3.0/dist/textAngular-rangy.min.js" type="text/javascript"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/textAngular/1.3.0/dist/textAngular-sanitize.min.js" type="text/javascript"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/textAngular/1.3.0/dist/textAngular.min.js" type="text/javascript"></script>
+		<script src="dist/textAngular-rangy.min.js" type="text/javascript"></script>
+		<script src="dist/textAngular-sanitize.min.js" type="text/javascript"></script>
+		<script src="dist/textAngular.min.js" type="text/javascript"></script>
 		<script src="js/demo.js" type="text/javascript"></script>
 </body>
 </html>
