--- a/src/demo/static-demo.html
+++ b/src/demo/static-demo.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
 
-  <title>textAngular 1.4.1 Demo</title>
+  <title>textAngular <%= version %> Demo</title>
 
   <meta name="robots" content="noindex">
 
