--- a/src/demo/textAngular.com.html
+++ b/src/demo/textAngular.com.html
@@ -19,10 +19,8 @@
 		<link rel="stylesheet" href="http://textangular.com/css/style.css" type="text/css">
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js" type="text/javascript"></script>
 
-        
-        <script src='../dist/textAngular-rangy.min.js'></script> 
-        <script src='../dist/textAngular-sanitize.min.js'></script> 
-        <script src='../dist/textAngular.min.js'></script> 
+        <% js.forEach(function(each){ %>
+        <script src='../<%= each %>'></script> <% }); %>
 		
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js" type="text/javascript"></script>
 		<script src="http://resources.infolinks.com/js/infolinks_main.js" type="text/javascript"></script>
@@ -47,8 +45,8 @@
 				</div>
 			</div><br>
 			<div class="container text-right">
-				<span class="well btn-md"><b>//cdnjs.cloudflare.com/ajax/libs/textAngular/1.4.1/textAngular.min.js</b></span>&nbsp;&nbsp;&nbsp;<a href="https://github.com/fraywing/textAngular/archive/v1.4.1.zip" class="btn btn-danger btn-lg">
-                    <div><i class="icon-arrow-down"> </i><span>Download v1.4.1</span></div></a></div>
+				<span class="well btn-md"><b>//cdnjs.cloudflare.com/ajax/libs/textAngular/<%= version %>/textAngular.min.js</b></span>&nbsp;&nbsp;&nbsp;<a href="https://github.com/fraywing/textAngular/archive/v<%= version %>.zip" class="btn btn-danger btn-lg">
+                    <div><i class="icon-arrow-down"> </i><span>Download v<%= version %></span></div></a></div>
 			<br>
 			<div class="container border-around text-center lighter">
 				<iframe src="http://ghbtns.com/github-btn.html?user=fraywing&amp;repo=textAngular&amp;type=watch&amp;size=large&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="220" height="30"></iframe>
