--- a/src/demo/static-demo.html
+++ b/src/demo/static-demo.html
@@ -9,7 +9,7 @@
 
   <meta name="robots" content="noindex">
 
-  <link rel='stylesheet prefetch' href='../bower_components/bootstrap-css-only/css/bootstrap.min.css'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel='stylesheet prefetch' href='../bower_components/font-awesome/css/font-awesome.css'>
   <link rel='stylesheet prefetch' href='../dist/textAngular.css' media="screen">
 
