chore(index.html): correct to the correct path on cdnjs.cloudfare.com

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<div class="col-sm-8">
 					<h3>CDN URL</h3>
 					<div class="well">
-						<a href="http://cdnjs.cloudflare.com/ajax/libs/textAngular/1.4.6/dist/textAngular.min.js" class="text-gray"><b>//cdnjs.cloudflare.com/ajax/libs/textAngular/1.4.6/dist/textAngular.min.js</b></a>
+						<a href="http://cdnjs.cloudflare.com/ajax/libs/textAngular/1.4.6/textAngular.min.js" class="text-gray"><b>//cdnjs.cloudflare.com/ajax/libs/textAngular/1.4.6/textAngular.min.js</b></a>
 					</div>
 				</div>
 				<div class="col-sm-4">
