Fix(index): Updated to automatically use the version from textAngularManager

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<a href="http://github.com/fraywing/textAngular">
-						<img src="images/textAngularLogo.png" style="max-width:500%;">
-					</a>
+						<img src="images/textAngularLogo.png" style="max-width:500%;"></a>
+					<span text-angular-version style="font-size:20px; position:relative; top:26px;">
 					<h2>A Lightweight, Two-Way-Bound &amp; Totally <b class="text-red">Awesome</b> Angular.js Text-Editor</h2>
 				</div>
 			</div>
@@ -46,12 +46,12 @@
 				<div class="col-sm-8">
 					<h3>CDN URL</h3>
 					<div class="well">
-						<a href="http://cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.5/textAngular.min.js" class="text-gray"><b>//cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.5/textAngular.min.js</b></a>
+						<a href="http://cdnjs.cloudflare.com/ajax/libs/textAngular/{{version}}/textAngular.min.js" class="text-gray"><b>//cdnjs.cloudflare.com/ajax/libs/textAngular/{{version}}/textAngular.min.js</b></a>
 					</div>
 				</div>
 				<div class="col-sm-4">
 					<h3>Zip package</h3>
-					<a href="https://github.com/fraywing/textAngular/archive/v1.5.5.zip" class="btn btn-block btn-danger btn-lg">
+					<a href="https://github.com/fraywing/textAngular/archive/v{{version}}.zip" class="btn btn-block btn-danger btn-lg">
 						Download
 					</a>
 				</div>
