--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 				<div class="col-sm-8">
 					<h3>CDN URL</h3>
 					<div class="well">
-						<a href="http://cdnjs.cloudflare.com/ajax/libs/textAngular/{{version}}/textAngular.min.js" class="text-gray"><b>//cdnjs.cloudflare.com/ajax/libs/textAngular/{{version}}/textAngular.min.js</b></a>
+						<a href="http://cdnjs.cloudflare.com/ajax/libs/textAngular/{{versionNumber}}/textAngular.min.js" class="text-gray"><b>//cdnjs.cloudflare.com/ajax/libs/textAngular/{{versionNumber}}/textAngular.min.js</b></a>
 					</div>
 				</div>
 				<div class="col-sm-4">
 					<h3>Zip package</h3>
-					<a href="https://github.com/fraywing/textAngular/archive/v{{version}}.zip" class="btn btn-block btn-danger btn-lg">
+					<a href="https://github.com/fraywing/textAngular/archive/{{version}}.zip" class="btn btn-block btn-danger btn-lg">
 						Download
 					</a>
 				</div>
