fix(index): added a clearfix to the ta-text-editor-class

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<h3>Editor demo</h3>
-					<div text-angular ng-model="htmlContent" name="demo-editor" ta-text-editor-class="border-around" ta-html-editor-class="border-around"></div>
+					<div text-angular ng-model="htmlContent" name="demo-editor" ta-text-editor-class="clearfix border-around" ta-html-editor-class="border-around"></div>
 				</div>
 			</div>
 			<div class="row">
