--- a/src/demo/demo.html
+++ b/src/demo/demo.html
@@ -6,7 +6,8 @@
     <title>textAngular <%=version %> Demo</title>
     <meta name="robots" content="noindex">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel='stylesheet' href='../bower_components/font-awesome/css/font-awesome.css'>
+    <link rel='stylesheet' href='../../bower_components/font-awesome/css/font-awesome.css'>
+    <link rel="stylesheet" href="../../bower_components/angular-bootstrap/ui-bootstrap-csp.css">
     <link rel="stylesheet" href="http://textangular.com/dist/textAngular.css" type="text/css">
     <style>
         h1 small {
@@ -17,17 +18,19 @@
         }
     </style>
 
-    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <!-- enable this section or the non-minimized section below -->
-    <% js.forEach(function(each){ %>
-      <script src='../<%= each %>'></script>
-    <% }); %>
-    <!-- non minimized version for ease of debugging
-        <script src='../dist/textAngular-rangy.min.js'></script>
-        <script src='../dist/textAngular-sanitize.js'></script>
-        <script src='../dist/textAngular.js'></script>
-        <script src='../dist/textAngularSetup.js'></script>
-    -->
+    <!--<% js.forEach(function(each){ %>-->
+      <!--<script src='../<%= each %>'></script>-->
+    <!--<% }); %>-->
+    <!-- non minimized version for ease of debugging -->
+    <script src="../../bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="../../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+        <script src='../../dist/textAngular-rangy.min.js'></script>
+        <script src='../../dist/textAngular-sanitize.js'></script>
+        <script src='../../dist/textAngular.js'></script>
+        <script src='../../dist/textAngularSetup.js'></script>
+
 </head>
 
 <body>
