--- a/demo/textAngular.com.html
+++ b/demo/textAngular.com.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
-
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=8" />
     <meta name="fragment" content="!">
@@ -20,7 +19,8 @@
     <link rel="stylesheet" href="http://textangular.com/dist/textAngular.css" type="text/css">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js" type="text/javascript"></script>
     <style>
-        textarea.ta-bind {
+        textarea.ta-bind
+        {
             width: 100%;
         }
     </style>
